tests/176_reserved_function_name_error.err
pirxc compilation failed: exit status 1
Output: tests/176_reserved_function_name_error.pirx:9:1: cannot define function PirxEq_Point: function names starting with Pirx are reserved
Error: exit status 1
